tests/expectations/parser/unreachable/eat_ident.out
namespace = "Parse"
expectation = "Fail"
outputs = ["""
Error [EPAR0370005]: expected 'import', 'program' -- found 'struct'
    --> test:2:1
     |
   2 | struct import
     | ^^^^^^"""]
